--- a/ClientApp/src/styles/createOrder.css
+++ b/ClientApp/src/styles/createOrder.css
@@ -26,3 +26,8 @@
     border-color: #C4C4C4 !important;
     border-width: 1px !important;
 }
+
+.css-1t4bf8g-MuiInputBase-root-MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline{
+    border-color: #C4C4C4 !important;
+    border-width: 1px !important;
+}
